major frontend change

--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,9 @@ MONGO_URI=mongodb://127.0.0.1/Event_mannagment
 
 
 JWT_SECRET=nji98uhvgy76tfcxr54eszaw32q1`/.,
+
+CLOUDINARY_CLOUD_NAME=dqpzfbeed
+
+CLOUDINARY_API_KEY=221199938537773
+
+CLOUDINARY_API_SECRET=OLISV-Sc5_I0pvm3LZyFhFNZIh0
